<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/set_profile_image"
            android:src="@drawable/picture"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/startimage" />

        <TextView
            android:id="@+id/click"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here_to_select_an_image"
            />

        <TextView
            android:id="@+id/importxml"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_xml"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>